[package]
name = "lokinit"
version = "0.4.0-alpha.0"
authors = ["The Loki Authors", "not-fl3 <not.fl3@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/loki-chat/lokinit"
repository = "https://github.com/loki-chat/lokinit"
description = "Fork of miniquad, focused on windowing."
readme = "README.md"
keywords = ["graphics", "3D", "opengl", "gamedev", "windowing"]
categories = ["rendering::graphics-api"]

[features]
# Optional log-rs like macros implementation
# disabled by default
log-impl = []

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "wingdi",
    "winuser",
    "libloaderapi",
    "windef",
    "shellscalingapi",
    "errhandlingapi",
    "windowsx",
    "winbase",
    "hidusage",
] }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
ndk-sys = "0.2"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
# TODO: maybe replace "gl" with "metal" once we support it.
# Having both "gl" and "metal" features prevents us from fetching prebuilt binaries, even when not compiling on MacOS.
objc = "0.2"

[dev-dependencies]
glam = { version = "0.14", features = ["scalar-math"] }
skia-safe = { version = "0.60.0", features = ["gl"] }

[package.metadata.android]
# rust-skia does not support cross-compilation to Android on ARMv7.
# ARMv7 is a 32-bit ARM architecture though, so it probably doesn't matter for our use-case.
build_targets = [
    "aarch64-linux-android",
    "i686-linux-android",
    "x86_64-linux-android",
]

[package.metadata.android.activity_attributes]
"android:exported" = "true"
